@startuml

class ScanInfo {
  +String scanDate
  +int TotalFileCount
  +int ScannedFileCount
  +int VulnerableFiles
  +int TotalVulnerabilityCount
  +int AcceptedVulnerabilities
  +int DiscardedVulnerabilities
  +int SuppressedVulnerabilities
  +int NewVulnerabilities
  +int PreviousVulnerabilities
  +int NonFilteredVulnerabilitiesCount
  +int NonFilteredAcceptedVulnerabilitiesCount
  +int NonFilteredDiscardedVulnerabilitiesCount
  +int NonFilteredSuppressedVulnerabilitiesCount
  +int NonFilteredNewVulnerabilitiesCount
  +int NonFilteredPreviousVulnerabilitiesCount
  +int PolicyState
}

class IncludedFilters {
  +String ConformationStatuses
}

class ExcludedFilters {
  +String SuspectedOrSecondOrder
}
ExcludedFilters --|> IncludedFilters

FilterInformation --> "includedFilters" IncludedFilters
FilterInformation --> "excludedFilters" ExcludedFilters

class Setting {
  +int order
  +boolean isExternalLink 
}

ScanInfo --> "scanSettings[]" Setting
ScanInfo --> "filterInformation" FilterInformation

class BaseDisplayName {
  +String displayName
  +String value
}

class Level {
  +String severity
}
Level --|> BaseDisplayName

Nist --|> BaseDisplayName
Owasp --|> BaseDisplayName
Owaspm --|> BaseDisplayName
Pcidss --|> BaseDisplayName
Sans --|> BaseDisplayName

class Type {
  +String id
  +String groupId
}
Type --|> BaseDisplayName
Setting --|> BaseDisplayName

@enduml
